# answer

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  DOCUMENTATION.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  INSTALL_INSTRUCTIONS.txt  QUERY_FLOW.md  README.md  REQUIREMENTS.doc  build-debug.sh  build.bat  build.ninja  build.sh  clean.sh  create_dmg_simple.sh  run.sh  test_mcp.sh
.qt/qml_imports/: MicroBrowser_build.rsp  MicroBrowser_conf.rsp
.qt/rcc/: MicroBrowser_raw_qml_0.qrc  qmake_MicroBrowser.qrc
distribution/: entitlements.plist  package_macos.sh
qml/: ChatView.qml  InsightsPanel.qml  Main.qml  TabWebView.qml
qmltypes/: MicroBrowser_foreign_types.txt
resources/: Info.plist  create_icon.sh
resources/icons/: AppIcon.icns
src/: analyzer.cpp  analyzer.h  chatbridge.cpp  chatbridge.h  config.h  config_keys.h.example  main.cpp  session.h
